[package]
name = "rq"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.12.2"
ndarray = { version = "0.17.1", features = ["rayon", "std"] }
ascii = "1.1.0"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
derive_more = {version = "2.0.1", features = ["display"]}
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
